# devex-agent

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  PLAN.md  README.md  UPDATE.md  pyproject.toml
.github/workflows/: ci.yml
docs/: AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PLAN.md  PROJECT.md  ROADMAP.md  SECURITY.md
src/devex_agent/: cli.py  generator.py
tests/: test_generator.py
tests/fixtures/: allof.yaml  petstore.yaml  secured.yaml  security.yaml  tag_order.yaml  tagged.yaml
