[project]
name = "devex-agent"
version = "0.1.1"
description = "Generate API docs with examples from OpenAPI specs."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Sarvesh Kapre"}]
dependencies = [
  "httpx>=0.27.0",
  "pyyaml>=6.0.1",
  "typer>=0.12.3",
]

[project.optional-dependencies]
dev = [
  "bandit>=1.7.8",
  "mypy>=1.11.0",
  "pytest>=8.2.0",
  "ruff>=0.5.6",
  "types-PyYAML>=6.0.12.20240808",
  "build>=1.2.2",
]

[project.scripts]
devex-agent = "devex_agent.cli:app"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict = true

[tool.pytest.ini_options]
addopts = "-q"
